--- a/code.html
+++ b/code.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scissor-Paper-Rock</title>
+    <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="Style/style.css" />
   </head>
   <body>
+    <div class="container">
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+    </div>
+    <button class="reset">reset</button>
     <script src="Script/script.js"></script>
   </body>
 </html>
