--- a/code.html
+++ b/code.html
@@ -20,6 +20,7 @@
       <div class="cell"></div>
     </div>
     <button class="reset">reset</button>
+    <p class="result"></p>
     <script src="Script/script.js"></script>
   </body>
 </html>
