--- a/code.html
+++ b/code.html
@@ -5,6 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="Style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Tic Tac Toe</h1>
+    <div class="container">
+      <div class="box b0"></div>
+      <div class="box b1"></div>
+      <div class="box b2"></div>
+      <div class="box b3"></div>
+      <div class="box b4"></div>
+      <div class="box b5"></div>
+      <div class="box b6"></div>
+      <div class="box b7"></div>
+      <div class="box b8"></div>
+      <div class="box b9"></div>
+    </div>
+
+    <!-- JavaScript -->
+    <script src="Script/script.js"></script>
+  </body>
 </html>
