--- a/code.html
+++ b/code.html
@@ -11,17 +11,34 @@
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
-    <div class="container">
-      <div class="box b0"></div>
-      <div class="box b1"></div>
-      <div class="box b2"></div>
-      <div class="box b3"></div>
-      <div class="box b4"></div>
-      <div class="box b5"></div>
-      <div class="box b6"></div>
-      <div class="box b7"></div>
-      <div class="box b8"></div>
-    </div>
+    <section class="container">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </section>
+
+    <section id="form">
+      <section>
+        <label for="p1"
+          ><p>Assign Player: X</p>
+          <input type="text" id="p1"
+        /></label>
+        <label for="p2"
+          ><p>Assign Player: O</p>
+          <input type="text" id="p2"
+        /></label>
+      </section>
+      <button id="start-btn">Start Game</button>
+    </section>
+
+    <div><button id="restart">Restart Game</button></div>
+    <p id="result"></p>
 
     <!-- JavaScript -->
     <script src="Script/script.js"></script>
